2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Fix checked_cover_image being set to true when it should be false.

2004-01-28  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Revert making artist and title labels one. It broke ellipsizification..
	or whatever the right word for that is.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* src/About.cs:

	Release 0.3.0, and depend on mono = 0.29 due to the bug in Mono CVS.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* src/About.cs:

	Release -pre2.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Make title_label and artist_label one, so that the text 
	can be easier selected. As suggested by synap.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Use dirname:albumname as album key. As discussed with ziegler.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/SkipToWindow.glade:
	* src/SkipToWindow.cs:

	Give up on ButtonPressEvent on the seeking HScale. 
	
	* NEWS:

	Forgot some stuff.

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	0.3.0-pre1

2004-01-27  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/Makefile.am:
	* data/muine.applications:
	* libmuine/Makefile.am:
	* libmuine/bacon-message-connection.c: (test_is_socket),
	(server_cb), (try_server), (try_client),
	(bacon_message_connection_new), (bacon_message_connection_free),
	(bacon_message_connection_set_callback),
	(bacon_message_connection_send),
	(bacon_message_connection_get_is_server):
	* libmuine/bacon-message-connection.h:
	* src/Makefile.am:
	* src/MessageConnection.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Add command line handling and an applications file so that
	Nautilus knows about us.
